--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^9.6.0",
     "eslint-config-next": "^14.1.3",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
